--- a/src/Examples/ViewFaceCore.Demo.VideoForm/Properties/Resources.resx
+++ b/src/Examples/ViewFaceCore.Demo.VideoForm/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="about" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\about.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="选项" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\选项.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
